syntax = "proto3";
package protobuf;

import "raftps.proto";

option go_package = "github.com/andyj29/raftbox/internal/raft/protobuf";

service RaftRPC {
    rpc AppendEntry (AppendEntryRequest) returns (AppendEntryReply) {}
    rpc RequestVote (RequestVoteRequest) returns (RequestVoteReply) {}
    rpc InstallSnapshot (InstallSnapshotRequest) returns (InstallSnapshotReply) {}
}

message AppendEntryRequest {
    uint32 term = 1;
    uint32 leaderId = 2;
    uint64 prevLogIndex = 3;
    uint32 prevLogTerm = 4;
    repeated protobuf.LogEntry entries = 5;
    uint64 leaderCommit = 6;
}

message AppendEntryReply {
    uint32 term = 1;
    bool success = 2;
    uint64 nextTryIndex = 3;
}

message RequestVoteRequest {
    uint32 term = 1;
    uint32 candidateId = 2;
    uint64 lastLogIndex = 3;
    uint64 lastLogTerm = 4;
}

message RequestVoteReply {
    uint32 term = 1;
    bool voteGranted = 2;
}

message InstallSnapshotRequest {
    uint32 term = 1;
    uint32 leaderId = 2;
    protobuf.Snapshot snapshot = 3;
}

message InstallSnapshotReply {
    uint32 term = 1;
}